--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -3,15 +3,15 @@
 <head>
   <meta charset="utf-8" />
   <meta name="color-scheme" content="dark">
-  <title>Week 1 – Stacked Bars</title>
-  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500&display=swap" rel="stylesheet">
+  <title>Week 2 – Stacked Bars</title>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;600&display=swap" rel="stylesheet">
   <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
   <style>
     :root { --bg:#191919; }
     html, body { height:100%; margin:0; background:var(--bg); font-family:'DM Sans', system-ui, -apple-system, Segoe UI, Arial, sans-serif; }
     .wrap { min-height:100%; display:flex; align-items:center; justify-content:center; padding:16px; }
-    .box  { width:100%; max-width:650px; }           /* smaller */
-    #chart { width:100%; height:340px; }             /* smaller */
+    .box  { width:100%; max-width:650px; }   /* compact */
+    #chart { width:100%; height:340px; }     /* compact */
   </style>
 </head>
 <body>
@@ -22,47 +22,65 @@
   </div>
 
   <script>
-    // ---- Data: [City, North, South, East, West] ----
+    // ---------------- DATA (Week 2) ----------------
+    // City totals:
+    // Riyadh: 13 (West 6, North 6, Anywhere 1)
+    // Dammam: 10 (East 4, North 6)
+    // Arar:    1 (West 1)
     const rows = [
-      ['Riyadh', 6, 3, 2, 1],
-      ['Jeddah', 5, 2, 3, 2],
-      ['Dammam', 7, 1, 3, 2],
-      ['Jubail', 2, 1, 1, 0],
-      ['Arar',   1, 1, 1, 0],
+      ['Riyadh',  {north:6, east:0, west:6, anywhere:1}],
+      ['Dammam',  {north:6, east:4, west:0, anywhere:0}],
+      ['Arar',    {north:0, east:0, west:1, anywhere:0}],
     ];
-    const cities = rows.map(r=>r[0]);
-    const north  = rows.map(r=>r[1]);
-    const south  = rows.map(r=>r[2]);
-    const east   = rows.map(r=>r[3]);
-    const west   = rows.map(r=>r[4]);
-    const totals = rows.map(r=>r.slice(1).reduce((a,b)=>a+b,0));
 
-    // Soft, distinct palette
-    const colors = { North:'#78C889', South:'#6FA8FF', East:'#E6C45A', West:'#F07A7A' };
+    const cities = rows.map(r=>r[0]);
+    const north  = rows.map(r=>r[1].north);
+    const east   = rows.map(r=>r[1].east);
+    const west   = rows.map(r=>r[1].west);
+    const anywhere = rows.map(r=>r[1].anywhere);
+    const totals = rows.map(r => Object.values(r[1]).reduce((a,b)=>a+b,0));
+
+    // Palette (soft, distinct, dark-theme friendly)
+    const colors = {
+      North:    '#78C889', // soft green
+      East:     '#E6C45A', // soft yellow
+      West:     '#F07A7A', // soft red
+      Anywhere: '#9B51E0'  // soft purple (special category)
+    };
 
     const el = document.getElementById('chart');
     const chart = echarts.init(el, null, { renderer:'canvas' });
 
-    // base style for stacked bars
+    // Base series style
     const baseBar = {
       type: 'bar',
       stack: 'total',
       barWidth: 22,
-      itemStyle: { borderRadius: 0, opacity: 0.9, borderColor: 'transparent' },
-      emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
-      blur: { itemStyle: { opacity: 0.25 } }
+      itemStyle: { borderRadius: 0, opacity: 0.9 },
+      emphasis: {           // highlight ONLY the hovered bar segment
+        focus: 'self',
+        itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' }
+      },
+      blur: { itemStyle: { opacity: 0.25 } } // dim others
     };
 
     const option = {
       backgroundColor:'#191919',
-      title: { text:'Week 1', left:'center', top:6, textStyle:{ color:'#fff', fontFamily:'DM Sans', fontWeight:500, fontSize:18 }},
+      title: {
+        text: 'Week 2',
+        subtext: 'Aug 25 – Sep 1, 2025',
+        left: 'center',
+        top: 6,
+        textStyle:   { color:'#ffffff', fontFamily:'DM Sans', fontWeight:'700', fontSize:18 },
+        subtextStyle:{ color:'#cccccc', fontFamily:'DM Sans', fontWeight:'600', fontSize:12, padding:[4,0,0,0] }
+      },
       legend: {
-        data:['North','South','East','West'],
-        top:34,                                   // moved down so it doesn't hit the title
+        data:['North','East','West','Anywhere in Riyadh'],
+        top: 48,
         textStyle:{ color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
         itemWidth:14, itemHeight:8
       },
-      grid: { left:'8%', right:'6%', top:70, bottom:48 },  // more top room for title+legend
+      grid: { left:'8%', right:'6%', top:78, bottom:48 }, // space for title + legend
       xAxis: {
         type:'category', data:cities,
         axisLabel:{ color:'#dddddd', fontFamily:'DM Sans' },
@@ -72,10 +90,11 @@
         type:'value', name:'Requests',
         nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
         axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
-        splitLine:{ lineStyle:{ color:'#2a2a2a' } }, axisLine:{ show:false }, axisTick:{ show:false }
+        splitLine:{ lineStyle:{ color:'#2a2a2a' } }, axisLine:{ show:false }, axisTick:{ show:false },
+        min: 0
       },
       tooltip: {
-        trigger:'item',                     // only hovered segment
+        trigger:'item', // only hovered segment
         axisPointer:{ type:'none' },
         backgroundColor:'#1f1f1f',
         borderColor:'#2c2c2c', borderWidth:1,
@@ -84,13 +103,13 @@
       },
       animationDuration: 800, animationEasing: 'quartOut',
       series: [
-        // bottom → top order; only the TOP gets rounded corners so stacks align cleanly
+        // stack order bottom->top; only the TOP gets rounded corners so stacks align perfectly
         { ...baseBar, name:'North', data:north, itemStyle:{ ...baseBar.itemStyle, color:colors.North, borderRadius:0 } },
-        { ...baseBar, name:'South', data:south, itemStyle:{ ...baseBar.itemStyle, color:colors.South, borderRadius:0 } },
         { ...baseBar, name:'East',  data:east,  itemStyle:{ ...baseBar.itemStyle, color:colors.East,  borderRadius:0 } },
-        { ...baseBar, name:'West',  data:west,  itemStyle:{ ...baseBar.itemStyle, color:colors.West,  borderRadius:[6,6,0,0] } },
+        { ...baseBar, name:'West',  data:west,  itemStyle:{ ...baseBar.itemStyle, color:colors.West,  borderRadius:0 } },
+        { ...baseBar, name:'Anywhere in Riyadh', data:anywhere, itemStyle:{ ...baseBar.itemStyle, color:colors.Anywhere, borderRadius:[6,6,0,0] } },
 
-        // Perfectly centered total labels using a custom series
+        // Centered total labels (pill) above each bar using a custom series
         {
           name: 'TotalLabels',
           type: 'custom',
@@ -99,11 +118,11 @@
             const idx = params.dataIndex;
             const xVal = cities[idx];
             const yVal = totals[idx];
-            const point = api.coord([xVal, yVal]);      // top of stack for this city
+            const pt = api.coord([xVal, yVal]);
             return {
               type: 'text',
-              x: point[0],
-              y: point[1] - 8,
+              x: pt[0],
+              y: pt[1] - 8,
               style: {
                 text: String(yVal),
                 textAlign: 'center',
@@ -118,7 +137,7 @@
               z: 20
             };
           },
-          data: totals.map((t, i) => ({ value: [cities[i], t] }))
+          data: totals.map((t,i)=>({ value:[cities[i], t] }))
         }
       ]
     };
