--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -22,141 +22,128 @@
   </div>
 
   <script>
-    // ---------- Week 2 data (keep categories fixed for consistency) ----------
-    // For each city, include all 5 categories (zeros allowed).
+    // ---------------- Week 2 data ----------------
+    // City rows in fixed category order: North, South, West, East, Center, Anywhere in Riyadh
     const rows = [
-      // city,                 North, East, West, Anywhere, Center
-      ['Riyadh',               6,     0,    6,    1,        0],
-      ['Dammam',               6,     4,    0,    0,        0],
-      ['Arar',                 0,     0,    1,    0,        0],
+      // city      N  S  W  E  C  Any
+      ['Riyadh',  6, 0, 6, 0, 0, 1],
+      ['Dammam',  6, 0, 0, 4, 0, 0],
+      ['Arar',    0, 0, 1, 0, 0, 0],
     ];
-
-    const categories = ['North','East','West','Anywhere in Riyadh','Center'];
-    const colors = {
-      'North':              '#78C889',  // soft green
-      'East':               '#E6C45A',  // soft yellow
-      'West':               '#F07A7A',  // soft red
-      'Anywhere in Riyadh': '#9B51E0',  // soft purple
-      'Center':             '#4EC7CC'   // soft teal
-    };
 
     const cities = rows.map(r => r[0]);
     const totals = rows.map(r => r.slice(1).reduce((a,b)=>a+b,0));
 
-    // Build a per-category series with per-point rounded corners only for the top non-zero segment.
-    // For each city, find the highest category index with value > 0.
+    // Category order: North, South, West, East, Center, then extra "Anywhere in Riyadh"
+    const categories = ['North','South','West','East','Center','Anywhere in Riyadh'];
+
+    // Colors (legend ⟷ bars 1:1)
+    const colorMap = {
+      'North':              '#78C889', // soft green
+      'South':              '#6FA8FF', // soft blue
+      'West':               '#F07A7A', // soft red
+      'East':               '#E6C45A', // soft yellow
+      'Center':             '#4EC7CC', // soft teal
+      'Anywhere in Riyadh': '#9B51E0'  // soft purple
+    };
+
+    // For each city, which category is the top non-zero segment?
     const topIndexByCity = rows.map(r => {
-      const vals = r.slice(1);
-      for (let i = vals.length - 1; i >= 0; i--) {
-        if (vals[i] > 0) return i; // last non-zero index
-      }
-      return -1; // all zeros (unlikely here)
+      const vals = r.slice(1); // 6 values
+      for (let i = vals.length - 1; i >= 0; i--) if (vals[i] > 0) return i;
+      return -1;
     });
 
-    // Helper to get array of values for a category index
-    const valuesFor = (catIndex) => rows.map(r => r[1 + catIndex]);
-
-    // Build series array in bottom→top order (same as categories array)
+    // Build series bottom→top in the same order as categories.
     const baseBar = {
       type: 'bar',
       stack: 'total',
       barWidth: 22,
       itemStyle: { borderRadius: 0, opacity: 0.9 },
-      emphasis: {
-        focus: 'self',
-        itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' }
-      },
+      emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
       blur: { itemStyle: { opacity: 0.25 } }
     };
 
+    function valuesFor(catIdx){ return rows.map(r => r[1 + catIdx]); }
+
     const series = categories.map((cat, catIdx) => {
       const vals = valuesFor(catIdx);
-      // For each city point, add rounded corners only if this category is the top non-zero segment.
-      const data = vals.map((v, cityIdx) => {
-        const rounded = (topIndexByCity[cityIdx] === catIdx) ? [6,6,0,0] : 0;
-        return { value: v, itemStyle: { color: colors[cat], borderRadius: rounded } };
-      });
-      return { ...baseBar, name: cat, data };
+      // series-level color ensures legend color matches bars
+      const s = {
+        ...baseBar,
+        name: cat,
+        itemStyle: { ...baseBar.itemStyle, color: colorMap[cat] },
+        data: vals.map((v, cityIdx) => {
+          const top = (topIndexByCity[cityIdx] === catIdx);
+          // Only the true top segment gets rounded top corners
+          return top ? { value: v, itemStyle: { borderRadius: [6,6,0,0] } } : v;
+        })
+      };
+      return s;
     });
 
-    // Custom series to draw centered total labels as pills above each column
-    const totalLabelSeries = {
+    // Centered total labels (pill) above each column
+    series.push({
       name: 'TotalLabels',
       type: 'custom',
       silent: true,
-      renderItem: function (params, api) {
-        const idx = params.dataIndex;
-        const x = cities[idx];
-        const y = totals[idx];
-        const pt = api.coord([x, y]);
+      renderItem: (params, api) => {
+        const i = params.dataIndex;
+        const pt = api.coord([cities[i], totals[i]]);
         return {
           type: 'text',
-          x: pt[0],
-          y: pt[1] - 8,
+          x: pt[0], y: pt[1] - 8,
           style: {
-            text: String(y),
+            text: String(totals[i]),
             textAlign: 'center',
             textVerticalAlign: 'bottom',
-            fill: '#ffffff',
-            fontFamily: 'DM Sans',
-            fontSize: 12,
+            fill: '#fff',
+            fontFamily: 'DM Sans', fontSize: 12,
             backgroundColor: 'rgba(0,0,0,0.55)',
-            padding: [2,6],
-            borderRadius: 8
-          },
-          z: 20
+            padding: [2,6], borderRadius: 8
+          }, z: 20
         };
       },
-      data: totals.map((t, i) => ({ value: [cities[i], t] }))
-    };
+      data: totals.map((t,i)=>({ value:[cities[i], t] }))
+    });
 
-    series.push(totalLabelSeries);
-
-    const chart = echarts.init(document.getElementById('chart'), null, { renderer: 'canvas' });
+    const chart = echarts.init(document.getElementById('chart'), null, { renderer:'canvas' });
 
     const option = {
-      backgroundColor: '#191919',
+      backgroundColor:'#191919',
       title: {
         text: 'Week 2',
         subtext: 'Aug 25 – Sep 1, 2025',
-        left: 'center',
-        top: 6,
-        textStyle:   { color:'#ffffff', fontFamily:'DM Sans', fontWeight:700, fontSize: 20 },
-        subtextStyle:{ color:'#cfcfcf',  fontFamily:'DM Sans', fontWeight:600, fontSize: 12, padding:[6,0,0,0] }
+        left: 'center', top: 6,
+        textStyle:   { color:'#fff', fontFamily:'DM Sans', fontWeight:700, fontSize:20 },
+        subtextStyle:{ color:'#cfcfcf', fontFamily:'DM Sans', fontWeight:600, fontSize:12, padding:[8,0,0,0] }
       },
       legend: {
         data: categories,
-        top: 58,                    // moved further down to add breathing room under the dates
-        textStyle: { color:'#dddddd', fontFamily:'DM Sans', fontSize: 12 },
-        itemWidth: 14, itemHeight: 8
+        top: 66,                 // more gap under the subtitle
+        textStyle: { color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
+        itemWidth:14, itemHeight:8
       },
-      grid: { left:'8%', right:'6%', top: 92, bottom: 48 },  // extra top gap for title + sub + legend
+      grid: { left:'8%', right:'6%', top: 98, bottom: 48 },
       xAxis: {
-        type: 'category',
-        data: cities,
-        axisLabel: { color:'#dddddd', fontFamily:'DM Sans' },
-        axisLine:  { lineStyle: { color: '#2a2a2a' } },
-        axisTick: { show:false }
+        type:'category', data:cities,
+        axisLabel:{ color:'#dddddd', fontFamily:'DM Sans' },
+        axisLine:{ lineStyle:{ color:'#2a2a2a' } }, axisTick:{ show:false }
       },
       yAxis: {
-        type: 'value',
-        name: 'Requests',
-        nameTextStyle: { color:'#ffffff', fontFamily:'DM Sans', fontSize: 12 },
-        axisLabel: { color:'#cccccc', fontFamily:'DM Sans' },
-        splitLine: { lineStyle: { color: '#2a2a2a' } },
-        axisLine: { show:false }, axisTick:{ show:false },
-        min: 0
+        type:'value', name:'Requests',
+        nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
+        axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
+        splitLine:{ lineStyle:{ color:'#2a2a2a' } },
+        axisLine:{ show:false }, axisTick:{ show:false }, min:0
       },
       tooltip: {
-        trigger: 'item',             // only hovered segment
-        axisPointer: { type:'none' },
-        backgroundColor: '#1f1f1f',
-        borderColor: '#2c2c2c', borderWidth: 1,
-        textStyle: { color:'#ffffff', fontFamily:'DM Sans' },
-        formatter: (p) => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
+        trigger:'item', axisPointer:{ type:'none' },
+        backgroundColor:'#1f1f1f', borderColor:'#2c2c2c', borderWidth:1,
+        textStyle:{ color:'#fff', fontFamily:'DM Sans' },
+        formatter: p => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
       },
-      animationDuration: 800,
-      animationEasing: 'quartOut',
+      animationDuration: 800, animationEasing: 'quartOut',
       series
     };
 
