--- a/week1_pie1.html
+++ b/week1_pie1.html
@@ -44,7 +44,7 @@
       'West':               '#F07A7A', // soft red
       'East':               '#E6C45A', // soft yellow
       'Center':             '#4EC7CC', // soft teal
-      'Anywhere in Riyadh': '#9B51E0'  // soft purple
+      'Anywhere': '#9B51E0'  // soft purple
     };
 
     // For each city, which category is the top non-zero segment?
@@ -152,3 +152,4 @@
   </script>
 </body>
 </html>
+
