--- a/week1_pie.html
+++ b/week1_pie.html
@@ -1,64 +1,153 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <script src="https://www.gstatic.com/charts/loader.js"></script>
-    <script>
-      google.charts.load("current", { packages: ["corechart"] });
-      google.charts.setOnLoadCallback(drawChart);
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="color-scheme" content="dark">
+  <title>Week 3 – Stacked Bars</title>
+  <link href="https://fonts.googleapis.com/css2?family=DM+Sans:wght@500;600;700&display=swap" rel="stylesheet">
+  <script src="https://cdn.jsdelivr.net/npm/echarts@5/dist/echarts.min.js"></script>
+  <style>
+    :root { --bg:#191919; }
+    html, body { height:100%; margin:0; background:var(--bg); font-family:'DM Sans', system-ui, -apple-system, Segoe UI, Arial, sans-serif; }
+    .wrap { min-height:100%; display:flex; align-items:center; justify-content:center; padding:16px; }
+    .box  { width:100%; max-width:650px; }
+    #chart { width:100%; height:340px; }
+  </style>
+</head>
+<body>
+  <div class="wrap">
+    <div class="box">
+      <div id="chart"></div>
+    </div>
+  </div>
 
-      function drawChart() {
-        const data = google.visualization.arrayToDataTable([
-          ["City", "Count"],
-          ["Riyadh", 4],
-          ["Jeddah", 6],
-          ["Dammam", 8],
-          ["Jubail", 2],
-          ["Arar", 3],
-          ["Other", 2],
-        ]);
+  <script>
+    // ---------------- Week 3 (Sep 1 – Sep 8, 2025) ----------------
+    // Fixed category order per row: North, South, West, East, Center, Anywhere in Riyadh
+    const rows = [
+      // city      N   S   W   E   C   Any
+      ['Riyadh',  15,  4,  0,  0,  0,   0],
+      ['Dammam',   1,  0,  4,  0,  0,   0],
+      ['Jeddah',   0,  0,  1,  0,  0,   0],
+    ];
 
-        // Map each city to a URL
-        const links = {
-          Riyadh: "https://your-notion-link/riyadh",
-          Jeddah: "https://your-notion-link/jeddah",
-          Dammam: "https://your-notion-link/dammam",
-          Jubail: "https://your-notion-link/jubail",
-          Arar: "https://your-notion-link/arar",
-          Other: "https://your-notion-link/other",
+    const cities = rows.map(r => r[0]);
+    const totals = rows.map(r => r.slice(1).reduce((a,b)=>a+b,0));
+
+    // Legend order you asked for
+    const categories = ['North','South','West','East','Center','Anywhere in Riyadh'];
+
+    // Colors mapped 1:1 with legend & series
+    const colorMap = {
+      'North':              '#78C889', // soft green
+      'South':              '#6FA8FF', // soft blue
+      'West':               '#F07A7A', // soft red
+      'East':               '#E6C45A', // soft yellow
+      'Center':             '#4EC7CC', // soft teal
+      'Anywhere in Riyadh': '#9B51E0'  // soft purple
+    };
+
+    // Identify top non-zero segment per city (for rounded caps)
+    const topIndexByCity = rows.map(r => {
+      const vals = r.slice(1);
+      for (let i = vals.length - 1; i >= 0; i--) if (vals[i] > 0) return i;
+      return -1;
+    });
+
+    const baseBar = {
+      type: 'bar',
+      stack: 'total',
+      barWidth: 22,
+      itemStyle: { borderRadius: 0, opacity: 0.9 },
+      emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
+      blur: { itemStyle: { opacity: 0.25 } }
+    };
+
+    function valuesFor(catIdx){ return rows.map(r => r[1 + catIdx]); }
+
+    const series = categories.map((cat, catIdx) => {
+      const vals = valuesFor(catIdx);
+      return {
+        ...baseBar,
+        name: cat,
+        // series-level color guarantees legend color == bars
+        itemStyle: { ...baseBar.itemStyle, color: colorMap[cat] },
+        data: vals.map((v, cityIdx) => {
+          const isTop = (topIndexByCity[cityIdx] === catIdx);
+          // Only the true top segment gets rounded top corners
+          return isTop ? { value: v, itemStyle: { borderRadius: [6,6,0,0] } } : v;
+        })
+      };
+    });
+
+    // Centered total labels above each column (pill style)
+    series.push({
+      name: 'TotalLabels',
+      type: 'custom',
+      silent: true,
+      renderItem: (params, api) => {
+        const i = params.dataIndex;
+        const pt = api.coord([cities[i], totals[i]]);
+        return {
+          type: 'text',
+          x: pt[0], y: pt[1] - 8,
+          style: {
+            text: String(totals[i]),
+            textAlign: 'center',
+            textVerticalAlign: 'bottom',
+            fill: '#fff',
+            fontFamily: 'DM Sans', fontSize: 12,
+            backgroundColor: 'rgba(0,0,0,0.55)',
+            padding: [2,6], borderRadius: 8
+          },
+          z: 20
         };
+      },
+      data: totals.map((t,i)=>({ value:[cities[i], t] }))
+    });
 
-        const options = {
-          title: "Week 1 - Locations",
-          is3D: true,
-          legend: { position: "right" },
-          pieSliceText: "value",
-          tooltip: { text: "both" },
-          colors: ["#3442E3", "#F97316", "#E3E8FF", "#FED7AA", "#3442E3", "#F97316"], // Manzil style
-          chartArea: { width: "80%", height: "80%" },
-        };
+    const chart = echarts.init(document.getElementById('chart'));
 
-        const chart = new google.visualization.PieChart(
-          document.getElementById("piechart_3d")
-        );
-        chart.draw(data, options);
+    const option = {
+      backgroundColor:'#191919',
+      title: {
+        text: 'Week 3',
+        subtext: 'Sep 1 – Sep 8, 2025',
+        left: 'center', top: 6,
+        textStyle:   { color:'#fff', fontFamily:'DM Sans', fontWeight:700, fontSize:20 },
+        subtextStyle:{ color:'#cfcfcf', fontFamily:'DM Sans', fontWeight:600, fontSize:12, padding:[8,0,0,0] }
+      },
+      legend: {
+        data: categories,
+        top: 66, // space under subtitle
+        textStyle: { color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
+        itemWidth:14, itemHeight:8
+      },
+      grid: { left:'8%', right:'6%', top: 98, bottom: 48 },
+      xAxis: {
+        type:'category', data:cities,
+        axisLabel:{ color:'#dddddd', fontFamily:'DM Sans' },
+        axisLine:{ lineStyle:{ color:'#2a2a2a' } }, axisTick:{ show:false }
+      },
+      yAxis: {
+        type:'value', name:'Requests',
+        nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
+        axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
+        splitLine:{ lineStyle:{ color:'#2a2a2a' } },
+        axisLine:{ show:false }, axisTick:{ show:false }, min:0
+      },
+      tooltip: {
+        trigger:'item', axisPointer:{ type:'none' },
+        backgroundColor:'#1f1f1f', borderColor:'#2c2c2c', borderWidth:1,
+        textStyle:{ color:'#fff', fontFamily:'DM Sans' },
+        formatter: p => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
+      },
+      animationDuration: 800, animationEasing: 'quartOut',
+      series
+    };
 
-        // Make slices clickable
-        google.visualization.events.addListener(chart, "select", function () {
-          const sel = chart.getSelection();
-          if (!sel.length) return;
-          const row = sel[0].row;
-          const city = data.getValue(row, 0);
-          const url = links[city];
-          if (url) window.open(url, "_blank"); // open in new tab
-        });
-
-        // Redraw on resize (optional)
-        window.addEventListener("resize", () => chart.draw(data, options));
-      }
-    </script>
-  </head>
-  <body>
-    <div id="piechart_3d" style="width: 900px; height: 520px;"></div>
-  </body>
+    chart.setOption(option);
+    window.addEventListener('resize', () => chart.resize());
+  </script>
+</body>
 </html>
