--- a/week5.html
+++ b/week5.html
@@ -11,10 +11,10 @@
     html, body { height:100%; margin:0; background:var(--bg); font-family:'DM Sans', system-ui, -apple-system, Segoe UI, Arial, sans-serif; }
     .wrap { min-height:100%; display:flex; align-items:center; justify-content:center; padding:16px; }
     .box  { width:100%; max-width:650px; }
-    .title { text-align:center; color:#fff; font-weight:700; font-size:20px; margin:4px 0 2px; }
-    .subtitle { text-align:center; color:#cfcfcf; font-weight:600; font-size:12px; margin:0 0 8px; }
+    .title { text-align:center; color:#fff; font-weight:700; font-size:20px; margin:6px 0 2px; }
+    .subtitle { text-align:center; color:#cfcfcf; font-weight:600; font-size:12px; margin:0 0 10px; }
     #chartReq, #chartBeds { width:100%; height:320px; }
-    .spacer { height:10px; }
+    .spacer { height:12px; }
   </style>
 </head>
 <body>
@@ -29,80 +29,140 @@
   </div>
 
   <script>
-    // ---------- Week 5 data ----------
-    // Fixed category order per row: North, South, West, East, Center, Anywhere in Riyadh
-    // City: Riyadh only (others are zero to keep palette consistent)
-    const rowsRequests = [
-      // city      N  S  W  E  C  Any
-      ['Riyadh',  8, 1, 1, 1, 3,  0]
-    ];
-    const rowsBeds = [
-      // city      N    S  W    E  C  Any
-      ['Riyadh',  834, 3, 150, 1, 6,  0]
-    ];
+    document.addEventListener('DOMContentLoaded', function () {
+      // ---------- Week 5 data ----------
+      // Fixed category order: North, South, West, East, Center, Anywhere in Riyadh
+      // City: Riyadh only (others zero to keep palette consistent)
+      const rowsRequests = [
+        // city      N  S  W  E  C  Any
+        ['Riyadh',  8, 1, 1, 1, 3,  0]
+      ];
+      const rowsBeds = [
+        // city      N    S  W    E  C  Any
+        ['Riyadh',  834, 3, 150, 1, 6,  0]
+      ];
 
-    const categories = ['North','South','West','East','Center','Anywhere in Riyadh'];
-    const colorMap = {
-      'North':              '#78C889', // soft green
-      'South':              '#6FA8FF', // soft blue
-      'West':               '#F07A7A', // soft red
-      'East':               '#E6C45A', // soft yellow
-      'Center':             '#4EC7CC', // soft teal
-      'Anywhere in Riyadh': '#9B51E0'  // soft purple
-    };
-
-    function buildChart(elId, rows, titleSuffix, showLegend=true) {
-      const cities = rows.map(r => r[0]);
-      const totals = rows.map(r => r.slice(1).reduce((a,b)=>a+b,0));
-
-      // which series is the top non-zero segment for each city (for rounded caps)?
-      const topIndexByCity = rows.map(r => {
-        const vals = r.slice(1);
-        for (let i = vals.length - 1; i >= 0; i--) if (vals[i] > 0) return i;
-        return -1;
-      });
-
-      const baseBar = {
-        type: 'bar',
-        stack: 'total',
-        barWidth: 22,
-        itemStyle: { borderRadius: 0, opacity: 0.9 },
-        emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
-        blur: { itemStyle: { opacity: 0.25 } }
+      const categories = ['North','South','West','East','Center','Anywhere in Riyadh'];
+      const colorMap = {
+        'North':              '#78C889',
+        'South':              '#6FA8FF',
+        'West':               '#F07A7A',
+        'East':               '#E6C45A',
+        'Center':             '#4EC7CC',
+        'Anywhere in Riyadh': '#9B51E0'
       };
 
-      function valuesFor(catIdx){ return rows.map(r => r[1 + catIdx]); }
+      function buildChart(elId, rows, yLabel, showLegend) {
+        const cities = rows.map(r => r[0]);
+        const totals = rows.map(r => r.slice(1).reduce((a,b)=>a+b,0));
 
-      // Build series bottom→top in the same order as categories
-      const series = categories.map((cat, catIdx) => {
-        const vals = valuesFor(catIdx);
-        return {
-          ...baseBar,
-          name: cat,
-          itemStyle: { ...baseBar.itemStyle, color: colorMap[cat] }, // legend color = bars
-          data: vals.map((v, cityIdx) => {
-            const isTop = (topIndexByCity[cityIdx] === catIdx);
-            return isTop ? { value: v, itemStyle: { borderRadius: [6,6,0,0] } } : v;
-          })
+        // which series is the top non-zero segment for each city (for rounded caps)?
+        const topIndexByCity = rows.map(r => {
+          const vals = r.slice(1);
+          for (let i = vals.length - 1; i >= 0; i--) if (vals[i] > 0) return i;
+          return -1;
+        });
+
+        const baseBar = {
+          type: 'bar',
+          stack: 'total',
+          barWidth: 22,
+          itemStyle: { borderRadius: 0, opacity: 0.9 },
+          emphasis: { focus: 'self', itemStyle: { opacity: 1, shadowBlur: 10, shadowColor: 'rgba(0,0,0,0.45)' } },
+          blur: { itemStyle: { opacity: 0.25 } }
         };
-      });
 
-      // Centered total labels above each column (pill), anchored to full stack height
-      series.push({
-        name: 'TotalLabels',
-        type: 'custom',
-        silent: true,
-        renderItem: (params, api) => {
-          const i = params.dataIndex;
-          const total = totals[i];
-          const pt = api.coord([cities[i], total]);
+        function valuesFor(catIdx){ return rows.map(r => r[1 + catIdx]); }
+
+        const series = categories.map((cat, catIdx) => {
+          const vals = valuesFor(catIdx);
           return {
-            type: 'text',
-            x: pt[0],
-            y: pt[1] - 10,
-            style: {
-              text: String(total),
-              textAlign: 'center',
-              textVerticalAlign: 'bottom',
-              fill: '#fff',
-              f
+            ...baseBar,
+            name: cat,
+            itemStyle: { ...baseBar.itemStyle, color: colorMap[cat] }, // legend color = bars
+            data: vals.map((v, cityIdx) => {
+              const isTop = (topIndexByCity[cityIdx] === catIdx);
+              return isTop ? { value: v, itemStyle: { borderRadius: [6,6,0,0] } } : v;
+            })
+          };
+        });
+
+        // Total pill above the full stack (with a little headroom)
+        series.push({
+          name: 'TotalLabels',
+          type: 'custom',
+          silent: true,
+          renderItem: (params, api) => {
+            const i = params.dataIndex;
+            const total = totals[i];
+            const pt = api.coord([cities[i], total]);
+            return {
+              type: 'text',
+              x: pt[0],
+              y: pt[1] - 10,
+              style: {
+                text: String(total),
+                textAlign: 'center',
+                textVerticalAlign: 'bottom',
+                fill: '#fff',
+                fontFamily: 'DM Sans', fontSize: 12,
+                backgroundColor: 'rgba(0,0,0,0.55)',
+                padding: [2,6],
+                borderRadius: 8
+              },
+              z: 20
+            };
+          },
+          data: totals.map((t,i)=>({ value:[cities[i], t] }))
+        });
+
+        const el = document.getElementById(elId);
+        const chart = echarts.init(el, null, { renderer: 'svg' }); // SVG for Notion reliability
+
+        const maxY = Math.max(...totals);
+        const option = {
+          backgroundColor:'#191919',
+          legend: showLegend ? {
+            data: categories,
+            top: 6,
+            textStyle: { color:'#dddddd', fontFamily:'DM Sans', fontSize:12 },
+            itemWidth:14, itemHeight:8
+          } : { show:false },
+          grid: showLegend
+            ? { left:'8%', right:'6%', top: 44, bottom: 40 }
+            : { left:'8%', right:'6%', top: 10, bottom: 40 },
+          xAxis: {
+            type:'category', data:cities,
+            axisLabel:{ color:'#dddddd', fontFamily:'DM Sans' },
+            axisLine:{ lineStyle:{ color:'#2a2a2a' } }, axisTick:{ show:false }
+          },
+          yAxis: {
+            type:'value', name: yLabel,
+            nameTextStyle:{ color:'#ffffff', fontFamily:'DM Sans', fontSize:12 },
+            axisLabel:{ color:'#cccccc', fontFamily:'DM Sans' },
+            splitLine:{ lineStyle:{ color:'#2a2a2a' } },
+            axisLine:{ show:false }, axisTick:{ show:false },
+            min: 0,
+            max: maxY + Math.ceil(maxY * 0.1) + 1  // headroom
+          },
+          tooltip: {
+            trigger:'item', axisPointer:{ type:'none' },
+            backgroundColor:'#1f1f1f', borderColor:'#2c2c2c', borderWidth:1,
+            textStyle:{ color:'#fff', fontFamily:'DM Sans' },
+            formatter: p => `${p.name} — ${p.seriesName}<br/><b>${p.value}</b>`
+          },
+          animationDuration: 800, animationEasing: 'quartOut',
+          series
+        };
+
+        chart.setOption(option);
+        window.addEventListener('resize', () => chart.resize());
+      }
+
+      // Build both charts
+      buildChart('chartReq',  rowsRequests, 'Requests', true);   // top chart with legend
+      buildChart('chartBeds', rowsBeds,     'Beds',     false);  // bottom chart (legend removed)
+    });
+  </script>
+</body>
+</html>
